# Human_Obstacle_Detector

./: .travis.yml  .ycm_extra_conf.py  LICENSE  readme.md  requirements.sh
app/: CMakeLists.txt  User.cpp  Utils.cpp  Yolo.cpp  main.cpp
docs/: Doxyfile.txt
include/: User.h  Utils.h  yolo.h
results/: CppcheckOutput.txt  CpplintOutput.txt
test/: CMakeLists.txt  UserTest.cpp  UtilsTest.cpp  YoloTest.cpp  main.cpp
